# groupml

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  pytest.ini
examples/: basic_regression.py  custom_cv_scorer.py  from_file.py  functional_from_file.py  group_columns.py  rule_split.py
examples/data/: group_split_demo.csv  rule_split_demo.csv
groupml/: __init__.py  __main__.py  cli.py  config.py  estimators.py  file_utils.py  functional.py  group_split_utils.py  mode_execution_utils.py  mode_utils.py  models_classification.py  models_regression.py  pipeline_utils.py  recommendation_utils.py  report_utils.py  result.py  runner.py  selectors_classification.py  selectors_regression.py  splitting.py  summaries.py  training_utils.py  utils.py
tests/: test_api.py  test_cli.py  test_example_datasets.py  test_file_utils.py  test_grouping.py  test_preprocessing.py  test_presets.py  test_rule_parser.py  test_smoke.py  test_splitting.py
