[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "groupml"
version = "0.1.0"
description = "Practical sklearn-native comparison of global vs group-aware modeling strategies."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "groupml contributors"}
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
]

[project.scripts]
groupml = "groupml.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["groupml*"]
